assorted changes and fixes